sonarqube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: sonarqube-justpay.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarqube-sonarqube
            port:
              number: 9000
  tls:
  - hosts:
    - sonarqube-justpay.duckdns.org
    secretName: sonarqube-tls-secret
